--- a/examples/baseNetwork/README
+++ b/examples/baseNetwork/README
@@ -1,2 +1,9 @@
 This example shows the basic structure of an network using MiXiM.
+
+The network consists of three hosts which use the CSMAMacLayer as MAC layer,
+"SimplePathlossModel" as only AnalogueModel and a SNRThresholdDecider as Decider.
+
+The used Network- and Application layer can be defined in the omnetpp.ini. As default
+the BaseNetwLayer and BurstApplLayer are used.
+
 You can use this network as an template for you own simulation.
