--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+v1.2
++ added port of 802154 narrowband phy and mac layer of mobility-fw2 for omnet 4 from Jérôme Rousselot
++ added global blackboard functionality to BaseWorldUtility
+* fixed memory leak when propagation delay is simulated
+
 v1.1
 + added port of EnergyFramework written by Laura Marie Feeney
 + added "headerLength" parameter to physical layer and fixed wrong MacPkt length in Mac80211
