--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,12 @@
 v1.2
 + added port of 802154 narrowband phy and mac layer of mobility-fw2 for omnet 4 from Jérôme Rousselot
 + added global blackboard functionality to BaseWorldUtility
++ introduced "csma" module which implements a generic CSMA mac protocol and will replace CSMAMacLayer 
+  in the future
 * fixed memory leak when propagation delay is simulated
 + made members of Move protected, added functions for member access
+* fixed a bug in the calculated receiving power of a signal which caused it to be greater zero before 
+  and after its signal in certain cases
 
 v1.1
 + added port of EnergyFramework written by Laura Marie Feeney
