--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ v1.2
 + added global blackboard functionality to BaseWorldUtility
 + introduced "csma" module which implements a generic CSMA mac protocol and will replace CSMAMacLayer 
   in the future
++ added depth dependent scaled display of hosts when GUI and 3-D is used
 + made members of Move protected, added functions for member access
 * fixed memory leak when propagation delay is simulated
 * fixed a bug in the calculated receiving power of a signal which caused it to be greater zero before 
