--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,8 @@ v1.2
   in the future
 + added depth dependent scaled display of hosts when GUI and 3-D is used
 + made members of Move protected, added functions for member access
++ gave networks of examples more meaningfull and consistent names (same as the example)
++ renamed executeables for examples from "MiXiM" to <example name>
 * fixed memory leak when propagation delay is simulated
 * fixed a bug in the calculated receiving power of a signal which caused it to be greater zero before 
   and after its signal in certain cases
