- fixed increasing heap size when host where sending but not receiving any AirFrames - introduced "recordStats" parameter to BasePhyLayer to be able to avoid tracking outputvectors (e.g. radio states) - moved long methods from PhyUtils.h to PhyUtils.cc

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,6 +14,9 @@ v1.2
 * fixed wrong calculation of position on "WRAP" border handling in BaseMobility
 * fixed missing connections when the cells from ConnectionManager do not cover the playground size
   exactly
+* fixed increasing heap memory usage while hosts sending AirFrames but wheren receiving any.
+  This was caused by RSAM tracking every radio state although there wheren't any Signals on the
+  channel to attenuate.
 
 v1.1
 + added port of EnergyFramework written by Laura Marie Feeney
