- fixed spelling and a class-name in documentation

--- a/INSTALL
+++ b/INSTALL
@@ -21,7 +21,7 @@ From the Omnet++ IDE
 --------------------
 This should be the same for every operating system.
 
-1. Choose "File->Import" from the menue.
+1. Choose "File->Import" from the menu.
 
 2. Choose "General->Existing Projects into Workspace" from the upcoming dialog and proceed with "Next".
 
