- added link to "WhatChanged" site - fixed a floating point precision bug

--- a/README
+++ b/README
@@ -120,3 +120,6 @@ see http://www.omnetpp.org/external/maillist.php for details.
 Release Notes
 =============
 
+See following site for notes on what changed with each release (beginning with 1.2):
+
+http://sourceforge.net/apps/trac/mixim/wiki/WhatChanged
