--- a/inet/examples/hybrid/README
+++ b/inet/examples/hybrid/README
@@ -1,12 +1,12 @@
-Network for testing a hybrid host containing different wired and wireless NICs.
+Network for testing a hybrid host (hybridRouter) containing different wired
+(from INET) and wireless (from MiXiM) NICs.
 
+This network contains several hosts, each equipped with a different type of
+NIC, in particular ethernet, 802.11 and 802.15.4 (TI_CC2420).
 
-This network contains several hosts equipped with different types of NICs, in
-particular ethernet, 802.11 and 802.15.4 (TI_CC2420).
-
-Further the network contains a hybrid host (hybridRouter) which is equipped with
+Further the network contains the hybridRouter which is equipped with
 all of these types of NICs. Thus the hybridRouter is capable of establishing a
-connection to every host in the network as well as route packages between two
+connection to every host in the network as well as route packages between
 hosts.
 
 All hosts which are not the router are equipped with a PING-application. The
