--- a/examples/baseNetwork/README
+++ b/examples/baseNetwork/README
@@ -1,9 +1,10 @@
-This example shows the basic structure of an network using MiXiM.
+This example shows the basic structure of a network using MiXiM.
 
 The network consists of three hosts which use the CSMAMacLayer as MAC layer,
-"SimplePathlossModel" as only AnalogueModel and a SNRThresholdDecider as Decider.
+"SimplePathlossModel" as only AnalogueModel and a SNRThresholdDecider as
+Decider.
 
-The used Network- and Application layer can be defined in the omnetpp.ini. As default
-the BaseNetwLayer and BurstApplLayer are used.
+The used Network- and Application layer can be defined in the omnetpp.ini. By
+default the BaseNetwLayer and BurstApplLayer are used.
 
-You can use this network as an template for you own simulation.
+You can use this network as a template for your own simulation.
