--- a/INSTALL
+++ b/INSTALL
@@ -23,21 +23,26 @@ This should be the same for every operating system.
 
 1. Choose "File->Import" from the menu.
 
-2. Choose "General->Existing Projects into Workspace" from the upcoming dialog and proceed with "Next".
+2. Choose "General->Existing Projects into Workspace" from the upcoming dialog 
+and proceed with "Next".
 
 3. Choose "Select archive file" and select the MiXiM archive file.
 
-4. "MiXiM" should appear in the "Projects" list below. Import it by clicking on "Finish".
+4. "MiXiM" should appear in the "Projects" list below. Import it by clicking on
+"Finish".
 
 5. Build MiXiM (Ctrl+B)
 
 6. Run an example:
 	1. Choose an example from the examples directory.
-	2. Right click its executeable and choose "Run as" -> "Run configurations...".
+	2. Right click its executeable and choose 
+		"Run as" -> "Run configurations...".
 	3. Double click on "Omnet++ Simulation" in the left list to create a new
-	   Omnet++ run configuration for this example (each example needs its own Run 
-	   configuration). The "Working directory" should be the examples directory.
-	   Also make sure the correct executable is choosen under "Executable: ... Other:" 
+	   Omnet++ run configuration for this example (each example needs its own
+	   Run configuration). The "Working directory" should be the examples
+	   directory.
+	   Also make sure the correct executable is choosen under 
+	   	"Executable: ... Other:" 
 	   (should be the one inside the examples directory).
 	4. Click "Run"
 	
