--- a/inet/README
+++ b/inet/README
@@ -2,12 +2,18 @@ Mixnet Framework
 ================
 
 Mixnet is a project contained in MiXiM's "inet" folder which provides all
-modules, examples and documentation concerning using MiXiM and INET together
-in the same network.
+modules, examples and documentation concerning using MiXiM and the INET 
+framework together in the same network.
+
+The INET framework is independent from MiXiM. It is an open-source communication
+networks simulation package providing models for several Internet protocols like
+TCP, IP, UDP, Ethernet, PPP and MPLS with LDP and RSVP-TE signalling. The INET
+framework can be found here: 
+	http://inet.omnetpp.org/
 
 Mixnet connects INET's application layer, IP-stack and non-wireless NICs with
-MiXiM's NICs and mobility modules. Thus, using Mixnet a node in a simulation may
-contain modules of INET and MiXiM.
+MiXiM's NICs and mobility modules. Thus, using Mixnet, a node in a simulation
+may contain modules of INET and MiXiM.
 
 
 Getting started
@@ -18,23 +24,29 @@ To set up and run Mixnet, you need:
     * the "inet4mixnet" fork from github: http://github.com/mixim/inet4mixnet
     
 How to prepare MiXiM, INET and Mixnet:
-1.  Install MiXiM and add its project to your OMNeT IDE
-    (see MiXiM's INSTALL-file in the MiXiM folder)
-2.  Download "inet4mixnet" from http://github.com/mixim/inet4mixnet/tarball/v1.0
-3.  Import the downloaded "inet4mixim" project into your OMNeT IDE
-4.  Now add the mixnet project to your OMNeT IDE
-    1.  Choose "File->Import..." from the menu
-    2.  Choose "Existing projects into workspace"
-    3.  Select "Select root directory" and click "Browse"
-    4.  Browse to MiXiM's "inet" directory and click "Ok"
-    5.  Under "Projects" you should see and choose "Mixnet"
-    6.  Enable "Copy projects into workspace"
-    7.  Click "Finish"
-5.  Now your OMNeT IDE should contain all three projects: "MiXiM", "INET" and
-    "Mixnet"
-6.  Choose "Project->Build All" from the menue to build all three projects.
-7.  If the build process was successful you can try starting one of the the
-    example networks from Mixnet's "examples" directory.
+
+MiXiM: 	If not already done install MiXiM and add its project to your OMNeT IDE
+       	(see MiXiM's INSTALL-file in the MiXiM folder)
+       
+INET: 	1. Download "inet4mixnet" from 
+		 	http://github.com/mixim/inet4mixnet/tarball/v1.0
+      	2. Import the downloaded "inet4mixim" project into your OMNeT IDE
+      
+Mixnet: In case you didn't choose to import Mixnet during the installation of 
+		MiXiM you can do it now following these steps (otherwise you can 
+		ignore them):
+		    1.  Choose "File->Import..." from the menu
+		    2.  Choose "Existing projects into workspace"
+		    3.  Select "Select root directory" and click "Browse"
+		    4.  Browse to MiXiM's "inet" directory and click "Ok"
+		    5.  Under "Projects" you should see and choose "Mixnet"
+		    6.  Enable "Copy projects into workspace"
+		    7.  Click "Finish"
+    
+Now your OMNeT IDE should contain all three projects: "MiXiM", "inet" and
+"Mixnet". Choose "Project->Build All" from the menu to build all of them. 
+If the build process was successful you can try to start one of the example
+networks from Mixnet's "examples" directory.
 
 As a next step you can use the examples as templates for your own simulation
 networks or have a look at the documentation (see next section).
