--- a/inet/README
+++ b/inet/README
@@ -21,7 +21,13 @@ Getting started
 
 To set up and run Mixnet, you need:
     * MiXiM (since 2.0)
-    * the "inet4mixnet" fork from github: http://github.com/mixim/inet4mixnet
+    * The "inet4mixnet" fork from github: http://github.com/mixim/inet4mixnet
+      * The INET framework is an independent from MiXiM developed framework for
+        wireless networks. The original framework can be found at 
+      		http://inet.omnetpp.org/
+      * The INET branch we provide is only a version of INET which has been made
+        compatible with MiXiM by removing all wireless related modules. We did
+        not add any further functionality to it.
     
 How to prepare MiXiM, INET and Mixnet:
 
