--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v2.1
+* organized inter-module dependent initialisation code
+
 v2.0
 + introduced Mixnet - compatibility modules for using MiXiM NICs within INET 
   networks
