--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,23 +1,43 @@
 v2.1
++ added WiseRoute and Flooding network layer modules ported for MiXiM by
+  Theodoros Kapourniotis
++ added modules from MoBAN project from Majid Nabi, Marc Geilen and Twan Basten
++ added BMAC layer implementation written by Anna Förster
++ added several more modules to choose from in "Basic MiXiM network" wizzard
++ new probabilistic broadcast routing modules
++ new packet error rate analogue model (PERModel) 
++ new BreakPointPathloss analogue model
++ introduced "debugEV" which together with a modules "debug" parameter enables 
+  per module debugging for end user modules
++ added preconfigured hosts for 802.11 and 802.15.4 protocol respectively
++ added support for phy protocol ids to identify the protocol used for a
+  transmission
 + added multi channel support to BasePhyLayer
 + added Nic80211MultiChannel which extends the Nic80211 with multi channel 
-support
+  support
 + added parameter "scaleNodeByDepth" to BaseMobility to disable scaling of nodes
-when tkenv and 3d is used
+  when tkenv and 3d is used
 + added more modulation models to Decider802154Narrow
++ changed BaseMobilities updatePosition function to support scaled play grounds
+  (when the playground size does not match the size of the drawn playground)
+* changed unit of acceleration in ned files from "mps2" to "mpss" since omnet
+  can't handle numbers at the end
+* fixed SensorApplLayer to find world utility module and network layer address
+  more robust
+* corrected evaluation of Decider802154Narrow's frame RSSI value
 * removed "centerFrequency" and "defaultChannel" parameter from Mac80211 module,
-they are replaced by BasePhyLayers "initialRadioChannel" parameter
+  they are replaced by BasePhyLayers "initialRadioChannel" parameter
 * organized inter-module dependent initialisation code
 * fixed CSMA802154 module to correctly use csma802154 class instead of only csma
 * fixed problem where airframes arrived at different order in tkenv and cmdenv
 * fixed problem with NicEntryDebug when a Nic unregisters and then registers
-itself again with ConnectionManager
+  itself again with ConnectionManager
 * changed Mac80211 to wait for end of transmission instead of end of a timer
-to start a new cycle after sending a CTS
+  to start a new cycle after sending a CTS
 * typedef of ChannelInfo::AirFrameVector changed from vector to list
 * fixed csma's exponential slot interval from [1,2^BE] to [0,2^BE]
 * fixed a bug in SimpleBattery where the capacity wasn't updated if publishing
-was disabled
+  was disabled
 
 
 
